# ApkAnalyzer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: build-release.yml
build_android/: CMakeCache.txt
build_linux/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ApkAnalyzer.slnx  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apkanalyzer_cli.vcxproj  apkanalyzer_gui.vcxproj  apkanalyzer_gui.vcxproj.filters  apkanalyzer_lib.vcxproj  apkanalyzer_lib.vcxproj.filters  cmake_install.cmake
build_linux/apkanalyzer_cli.dir/Release/: apk_offset_gen.exe.recipe
build_linux/apkanalyzer_cli.dir/Release/apkanalyzer_cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  apkanalyzer_cli.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_linux/apkanalyzer_gui.dir/Release/: apkanalyzer_gui.exe.recipe
build_linux/apkanalyzer_gui.dir/Release/apkanalyzer_gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_linux/apkanalyzer_lib.dir/Release/: apkcore.dll.recipe
build_linux/apkanalyzer_lib.dir/Release/apkanalyzer_lib.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_linux/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_linux/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_temp/: ALL_BUILD.vcxproj  ApkAnalyzer.slnx  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apkanalyzer_cli.vcxproj  apkanalyzer_gui.vcxproj  apkanalyzer_gui.vcxproj.filters  apkanalyzer_lib.vcxproj  apkanalyzer_lib.vcxproj.filters  cmake_install.cmake
build_temp/apkanalyzer_cli.dir/Release/: apk_offset_gen.exe.recipe
build_temp/apkanalyzer_cli.dir/Release/apkanalyzer_cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_temp/apkanalyzer_gui.dir/Release/: apkanalyzer_gui.exe.recipe
build_temp/apkanalyzer_gui.dir/Release/apkanalyzer_gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  (+3 more)
build_temp/apkanalyzer_lib.dir/Release/: apkcore.dll.recipe
build_win/: ALL_BUILD.vcxproj  ApkAnalyzer.slnx  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apkanalyzer_cli.vcxproj  apkanalyzer_cli.vcxproj.filters  apkanalyzer_gui.vcxproj  apkanalyzer_gui.vcxproj.filters  apkanalyzer_lib.vcxproj  cmake_install.cmake
build_win/apkanalyzer_cli.dir/Release/: apk_offset_gen.exe.recipe
build_win/apkanalyzer_gui.dir/Release/: apkanalyzer_gui.exe.recipe
build_win/apkanalyzer_lib.dir/Release/: apkcore.dll.recipe
docs/: architecture.md
include/: Decoder.hpp  DexParser.hpp  ElfParser.hpp  EntropyCalculator.hpp  Exporter.hpp  FileMapper.hpp  Il2CppCodeRegistration.hpp  Il2CppMetadataDefs.hpp  Il2CppScanner.hpp  Instrumentation.hpp  Logger.hpp  ManifestParser.hpp  MemoryScanner.hpp  MemoryUtils.hpp  Menu.hpp  NativeTracer.hpp  PatternScanner.hpp  Utils.hpp  ZipUtility.hpp
native/include/: dex_header.hpp
native/src/parsers/: dex_parser.cpp
native/src/utils/: math_utils.cpp
python/scripts/: analyze_report.py  file_analyzer.py
src/: Decompiler.cpp  Deobfuscator.cpp  DexParser.cpp  ElfParser.cpp  Exporter.cpp  Il2CppScanner.cpp  Logger.cpp  ManifestParser.cpp  MemoryScanner.cpp  MemoryUtils.cpp  Menu.cpp  NativeTracer.cpp  PatternScanner.cpp  ZipUtility.cpp  dex_parser.rs  elf_parser.rs  entropy.rs  exporter.rs  gui.rs  gui_main.cpp  il2cpp_scanner.rs  main.cpp  main.rs  manifest_parser.rs  scanner.rs  utils.rs  zip_utility.rs
src/core/: Decoder.cpp  DexAnalyzer.cpp  FileMapper.cpp  Instrumentation.cpp  StringDecryptor.cpp
src/utils/: EntropyCalculator.cpp  Utils.cpp
tests/: test_entropy.cpp
(+50 files in other folders)
