[package]
name = "apkanalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28" # GUI framework
egui = "0.28"
log = "0.4"
env_logger = "0.11"
object = "0.36" # For ELF/Binary parsing
itertools = "0.13"
hex = "0.4"
sha2 = "0.10"
walkdir = "2.5"
zip = "2.1"

[build-dependencies]
cc = "1.1"
